# dedup

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml  cli.yml
.cargo/: config
benchsuite/: benchrunner
ci/: before_deploy.ps1  before_deploy.sh  install.sh  script.sh
fastchr/: Cargo.toml
fastchr/benches/: benches.rs
fastchr/src/: lib.rs
fastchr/tests/: tests.rs
gumshoe/: Cargo.toml
gumshoe/src/: allocators.rs  lib.rs
lumpy_chunks/: Cargo.toml
lumpy_chunks/src/: lib.rs
poirot/: Cargo.toml
poirot/src/: lib.rs
src/: args.rs  buffer.rs  config.rs  error.rs  main.rs  manager.rs  output.rs  set.rs  stream.rs  unsorted.rs
