[package]
name = "dedup"
version = "0.1.0"
authors = ["Chris McDonald <mail.chris.mcdonald@gmail.com>"]

[badges]
travis-ci = { repository = "cjm00/dedup" }
appveyor = { repository = "cjm00/dedup" }

[dependencies]
memchr = "~2"
memmap = "~0.6.2"
clap = { version = "~2.30", features = ["yaml"] }
fxhash = "0.2.1"
fastchr = { version = "^0.1", path = "fastchr", optional = true }

[profile.release]
opt-level = 3
lto = true

[[bin]]
bench = false
path = "src/main.rs"
name = "dedup"

[features]
default = ["simd-accel"]
simd-accel = ["fastchr"]

[workspace]
members = ["fastchr"]
